Fix horizontal overflow on scrollbared windows

--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ input {
 
 body {
   min-height: 100vh;
-  width: 100vw; }
+  width: 100%; }
 
 .showOnMobile {
   display: none; }
